test/compile_errors/err_implicit_default_result_payload_requires_default.w
//! expect-check-fail: return type does not implement Default

type NoDefault { value: i32 }

fn bad -> Result[NoDefault, str]:
    let _x = 1
